Sign up form included to index in proper way (but it is not responsive yet). Fields user name login were removed from form . Style.css change social button fixed size 50x50

--- a/styles/signform.css
+++ b/styles/signform.css
@@ -39,11 +39,13 @@ ul.social-buttons {
 
 ul.social-buttons li a {
     display: block;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 100%;
-    font-size: 20px;
-    line-height: 40px;
+    font-size: 18px;
+    font-family: inherit;
+    line-height: 35px;
+    vertical-align: center;
     outline: 0;
     color:#fff ;
     background-color: #ea556f;
@@ -65,14 +67,15 @@ ul.social-buttons li a:active {
   height: 30px;
   padding: 6px 12px;
   font-size: 14px;
+  
   color: white;
   line-height: 1.0; 
   border: 1px solid #ccc;
   border-radius: 0pxt;
-
 }
 .butconf:hover,
 .butconf:focus,
 .butconf:active {
 background-color: #c84157; 
 }
+
